Actions
Bug #1116
closedbeadm *_snap commands shouldn't exist
Start date:
2011-06-16
Due date:
% Done:
0%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
It looks like beadm create and beadm destroy already handle snapshot names, so the *_snap variants are superfluous (and if not, create/destroy should probably be fixed such that they are)
Updated by Alexander Eremin almost 11 years ago
- Status changed from New to In Progress
- Assignee set to Alexander Eremin
Updated by Eric Schrock almost 11 years ago
- Status changed from In Progress to Resolved
changeset: 13407:cec0afe32134
tag: tip
user: Alexander Eremin <a.eremin@nexenta.com>
date: Tue Jul 19 10:35:32 2011 -0700
description:
1116 beadm *_snap commands shouldn't exist
1208 beadm doesn't show BE snapshots
Reviewed by: Dan McDonald <danmcd@nexenta.com>
Reviewed by: Igor Kozhukhov <ikozhukhov@gmail.com>
Reviewed by: Gary Mills <mills@cc.umanitoba.ca>
Reviewed by: Gordon Ross <gwr@nexenta.com>
Approved by: Eric Schrock <Eric.Schrock@delphix.com>
Actions