1116 beadm *_snap commands shouldn't exist 1208 beadm doesn't show BE snapshots Reviewed by: Dan McDonald <danmcd@nexenta.com> Reviewed by: Igor Kozhukhov <ikozhukhov@gmail.com> Reviewed by: Gary Mills <mills@cc.umanitoba.ca> Reviewed by: Gordon Ross <gwr@nexenta.com> Approved by: Eric Schrock <Eric.Schrock@delphix.com>